--- a/cat.html
+++ b/cat.html
@@ -3,55 +3,55 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>CatPhotoApp</title>
+    <title>PhotoApp</title>
   </head>
   <body>
     <main>
-      <h1>CatPhotoApp</h1>
+      <h1>PhotoApp</h1>
       <section>
-        <h2>Cat Photos</h2>
-        <!-- TODO: Add link to cat photos -->
-        <p>See more <a target="_blank" href="https://freecatphotoapp.com">cat photos</a> in our gallery.</p>
-        <a href="https://freecatphotoapp.com"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
+        <h2> Photos</h2>
+        <!-- TODO: Add link to  photos -->
+        <p>See more <a target="_blank" href="https://freephotoapp.com"> photos</a> in our gallery.</p>
+        <a href="https://freephotoapp.com"><img src="https://cdn.freecodecamp.org/curriculum/-photo-app/relaxing-.jpg" alt="A cute orange  lying on its back."></a>
       </section>
       <section>
-        <h2>Cat Lists</h2>
-        <h3>Things cats love:</h3>
+        <h2> Lists</h2>
+        <h3>Things s love:</h3>
         <ul>
-          <li>cat nip</li>
+          <li> nip</li>
           <li>laser pointers</li>
           <li>lasagna</li>
         </ul>
         <figure>
-          <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg" alt="A slice of lasagna on a plate.">
-          <figcaption>Cats <em>love</em> lasagna.</figcaption>  
+          <img src="https://cdn.freecodecamp.org/curriculum/-photo-app/lasagna.jpg" alt="A slice of lasagna on a plate.">
+          <figcaption>s <em>love</em> lasagna.</figcaption>  
         </figure>
-        <h3>Top 3 things cats hate:</h3>
+        <h3>Top 3 things s hate:</h3>
         <ol>
           <li>flea treatment</li>
           <li>thunder</li>
-          <li>other cats</li>
+          <li>other s</li>
         </ol>
         <figure>
-          <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/cats.jpg" alt="Five cats looking around a field.">
-          <figcaption>Cats <strong>hate</strong> other cats.</figcaption>  
+          <img src="https://cdn.freecodecamp.org/curriculum/-photo-app/s.jpg" alt="Five s looking around a field.">
+          <figcaption>s <strong>hate</strong> other s.</figcaption>  
         </figure>
       </section>
       <section>
-        <h2>Cat Form</h2>
-        <form action="https://freecatphotoapp.com/submit-cat-photo">
+        <h2> Form</h2>
+        <form action="https://freephotoapp.com/submit--photo">
           <fieldset>
-            <legend>Is your cat an indoor or outdoor cat?</legend>
+            <legend>Is your  an indoor or outdoor ?</legend>
             <label><input id="indoor" type="radio" name="indoor-outdoor" value="indoor" checked> Indoor</label>
             <label><input id="outdoor" type="radio" name="indoor-outdoor" value="outdoor"> Outdoor</label>
           </fieldset>
           <fieldset>
-            <legend>What's your cat's personality?</legend>
+            <legend>What's your 's personality?</legend>
             <input id="loving" type="checkbox" name="personality" value="loving" checked> <label for="loving">Loving</label>
             <input id="lazy" type="checkbox" name="personality" value="lazy"> <label for="lazy">Lazy</label>
             <input id="energetic" type="checkbox" name="personality" value="energetic"> <label for="energetic">Energetic</label>
           </fieldset>
-          <input type="text" name="catphotourl" placeholder="cat photo URL" required>
+          <input type="text" name="photourl" placeholder=" photo URL" required>
           <button type="submit">Submit</button>
         </form>
       </section>
